# cy-weather

./: .gitignore  Q_64_latest-2025-2026_RR-T-Vent.csv  cleanCSV.py  docker-compose.yaml
.github/workflows/: deploy.yml  python-app.yml  python-publish.yml
api/: Dockerfile  main.py  pyproject.toml  requirements.txt  test.py
api/src/services/: weather_service.py
mlflow/: README.md  docker-compose.yaml  garage.toml
mlflow/data/garage/data/: garage-marker
mlflow/data/garage/meta/: cluster_layout  data_layout  db.sqlite-shm  db.sqlite-wal  lifecycle_worker_state  node_key  node_key.pub  scrub_info
mlflow/data/mlflow/postgres/: postmaster.pid
mlflow/data/mlflow/postgres/base/1/: 1259  13471  2619  2619_vm  2696  2840  2841  pg_internal.init
mlflow/data/mlflow/postgres/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  13471  16393  16395  16416  16417  16438  16439  16457  16463  16464  16485  16486  16492  16493  16504  16505  16511  16523  16534  16535  16542  16543  16554  16562  16563  16569  16570  16575  16576  16588  16593  16601  16606  16607  16614  (+42 more)
mlflow/data/mlflow/postgres/base/4/: 2619
mlflow/data/mlflow/postgres/base/5/: pg_internal.init
mlflow/data/mlflow/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
mlflow/tests/: README_MLFLOW.md  data.csv  mlflow_01_basic_logging.py  mlflow_02_model_registry.py  mlflow_03_load_latest_model.py  mlflow_04_parameter_tuning.py  mlflow_05_data_drift_detection.py  requirements.txt
prometheus/: prometheus.yml
web/: README.md  vite.config.ts
